stopped navbar from collapsing

--- a/app/app.css
+++ b/app/app.css
@@ -14,3 +14,31 @@ body {
 #search-results .question-title {
     text-decoration: none;
 }
+
+#search-results .author-name {
+    cursor: pointer
+}
+
+/* Stop navbar from collapsing */
+.navbar-form .form-group {
+    display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+
+.navbar-form {
+    width: auto;
+    border: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.navbar-header {
+    float: left;
+}
+
+/* Stop navbar from collapsing */
